Update:Camera fix on mobile -new logic

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,7 @@ li {
 video {
     width: 80%;
     position: absolute;
+    max-height: 300px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
